--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
       <h2>I am a Web Developer</h2>
       <hr />
   <h3><a href="./public/my bl series review.html">Series Ranking Project</a></h3>
-  <img src="./assets/images/My Top5 BL Series.jpg" height="200" alt="movie ranking project preview"/>
+  <img src="./assets/images/My Top5 Bl Series.jpg" height="200" alt="movie ranking project preview"/>
   <h3><a href="./public/my bday-invite.html">Birthday Invite Project</a></h3>
   <img src="./assets/images/My Birthday Invite.jpg" height="200" alt="birthday invite project preview"/>
   <hr />
